# xale-logger

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
examples/: BasicUsage.cpp
include/: Logger.h  LoggerConfig.h
src/: LoggerConfig.cpp
tests/: LoggerTests.cpp  TestsHelper.h
